tests/syntax/bad/testfile-var-6.go
package main

func main() { x, 1 := 1, 2 }
